--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,13 +18,13 @@
       </button>
       <ul class="dropdown-menu" style="cursor: pointer;">
         <li>
-          <a (click)="onAddToShoppingList()">Add to Shopping List</a>
+          <a (click)="onAddToShoppingList()" style="cursor: pointer">Add to Shopping List</a>
         </li>
         <li>
-          <a href="#">Edit Recipe</a>
+          <a (click)="onEditRecipe()">Edit Recipe</a>
         </li>
         <li>
-          <a href="#">Delete Recipe</a>
+          <a>Delete Recipe</a>
         </li>
       </ul>
     </div>
