--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,10 +21,10 @@
           <a (click)="onAddToShoppingList()" style="cursor: pointer">Add to Shopping List</a>
         </li>
         <li>
-          <a (click)="onEditRecipe()">Edit Recipe</a>
+          <a (click)="onEditRecipe()" style="cursor: pointer;">Edit Recipe</a>
         </li>
         <li>
-          <a>Delete Recipe</a>
+          <a (click)="onDeleteRecipe()" style="cursor: pointer;">Delete Recipe</a>
         </li>
       </ul>
     </div>
